kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - shop-34-66-24-192.sslip.io
    secretName: shop-tls-prod
  rules:
  - host: shop-34-66-24-192.sslip.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
